# IoT-mqtt-simulator

./: .censitive  .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs  mqtt.rs  utils.rs
publisher/: Cargo.toml
publisher/src/: main.rs  sensor.rs
subscriber/: Cargo.toml
subscriber/prisma/: schema.prisma
subscriber/src/: database.rs  kafka.rs  main.rs  models.rs
